--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Vedran Presecki",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.3.3"
   },
